Fix vertical alignment

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -59,10 +59,10 @@ h1 {
 .section-green {
   background-color: #757d65;
   color: white;
-  height: 15vh;
-  padding: 50px 0 0 0;
   text-align: center;
   width: auto;
+  vertical-align: middle;
+  padding: 50px 0 50px 0;
 }
 
 .footer {
